@@ -26,4 +26,6 @@ Merged changes:
 5361, 5364, 5367				: patch neon from the build script
 5375							: critical sections to avoid crash when drive is unmounted (cache)
 5376							: OK button read "Cancel" instead of "OK" in log dialog started for selection
-5374							: doc change
+5374, 5381						: doc change, copyright
+5384							: crash with URLs in wrong case
+
