@@ -2,7 +2,7 @@
 {\fonttbl {\f0\fswiss\fcharset0 Arial;}}
 \f0\sa100\fs20
 
-Copyright (C) 2003-2005 - Stefan Kueng
+Copyright (C) 2003-2006 - Stefan Kueng
 
 \par\ql
 TortoiseSVN is free. You don't have to pay for it, and you can use it 
